--- a/vonline_be/war/css/settings.styl
+++ b/vonline_be/war/css/settings.styl
@@ -36,9 +36,16 @@
     &.short
       width 150px
       height 29px
+  select
+    padding-left 0
   .settings-add-link
-    padding-left 170px
+    padding-left 162px
     padding-bottom 20px
+  .remove-child
+    font-size 16px
+    color #ff0000
+    &:hover
+      text-decoration none
 
 .no-width
   width auto !important
