--- a/vonline_be/war/css/settings.styl
+++ b/vonline_be/war/css/settings.styl
@@ -68,6 +68,8 @@
 .settings-pet-item
   margin-left 160px
 
+#ui-datepicker-div
+  width 233px
 
 input.ng-invalid.ng-dirty
   border 1px solid #ff0000
