--- a/vonline_be/war/css/settings.css
+++ b/vonline_be/war/css/settings.css
@@ -97,6 +97,9 @@
 .settings-pet-item {
   margin-left: 160px;
 }
+#ui-datepicker-div {
+  width: 233px;
+}
 input.ng-invalid.ng-dirty {
   border: 1px solid #f00;
 }
