fix for issue #40

--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -102,6 +102,9 @@
 .save-status.active
   display inline-block
 
+.loading
+  width 40px
+
 @media all and (max-width: 1024px)
   .user-descr
     .ava-area
