--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -892,6 +892,14 @@ transform()
 .ui-dialog .ui-dialog-titlebar-close
   float right
 
+.ui-dialog .ui-dialog-content
+  padding 0
+
+.loadAvatar-area
+  h2
+    margin-top 0
+    margin-bottom 30px
+
 .load-avatar
   display block
   margin 0 auto
@@ -917,6 +925,8 @@ transform()
       background-color inherit
       font-weight normal
       border 0
+      margin 0
+      font-size 16px
   img
     max-width 500px
     max-height 500px
@@ -941,6 +951,8 @@ transform()
 
 .jcrop-holder
   background transparent !important
+  overflow hidden
+  margin 0 auto
   img
     /*background-repeat no-repeat*/
     /*background-position center center*/
