--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -128,6 +128,9 @@
 .save-status.active {
   display: inline-block;
 }
+.loading {
+  width: 40px;
+}
 @media all and (max-width: 1024px) {
   .user-descr .ava-area {
     width: 120px;
