--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -1041,6 +1041,13 @@ h1 {
 .ui-dialog .ui-dialog-titlebar-close {
   float: right;
 }
+.ui-dialog .ui-dialog-content {
+  padding: 0;
+}
+.loadAvatar-area h2 {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
 .load-avatar {
   display: block;
   margin: 0 auto;
@@ -1069,6 +1076,8 @@ h1 {
   background-color: inherit;
   font-weight: normal;
   border: 0;
+  margin: 0;
+  font-size: 16px;
 }
 .load-avatar img {
   max-width: 500px;
@@ -1092,4 +1101,6 @@ h1 {
 }
 .jcrop-holder {
   background: transparent !important;
+  overflow: hidden;
+  margin: 0 auto;
 }
