--- a/vonline_be/war/partials/profile.changeAvatar.html
+++ b/vonline_be/war/partials/profile.changeAvatar.html
@@ -8,11 +8,13 @@
         <div class="crop-area hidden">
             <div style="margin-bottom:10px;">
                 <h4>Панель предварительного просмотра:</h4>
-                <div class="preview-container">
+
+                <div><img src="../i/loading.gif" alt="подождите" class="loading"/></div>
+                <div class="preview-container hidden">
                     <img id="preview" src="#"/>
                 </div>
             </div>
-            <img src="#" alt="#" id="image-for-crop"/>
+            <img src="#" alt="#" id="image-for-crop" class="hidden"/>
 
             <button class="btn btn-sm no-border btn-primary btn-save-avatar" ng-click="changeAvatar.save()">Сохранить</button>
             <button class="btn btn-sm no-border btn-primary btn-back" ng-click="changeAvatar.back()">Назад</button>
