--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -247,10 +247,12 @@
     margin-bottom 15px
 
     /* registration forum */
-.registration
-  width 1024px !important
-  margin 0 auto !important
-  float none !important
+@media all and (min-width: 1024px)
+  .registration
+    width 1024px !important
+    margin 0 auto !important
+    float none !important
+
 .reg-forum
   //padding-top 60px
   header
