--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -954,3 +954,12 @@ transform()
   overflow hidden
   margin 0 auto
 
+  /* coming soon */
+.coming-soon
+  text-align center
+  min-height 0
+  p
+    font-size 16px
+  h1
+    font-size 40px
+
